@@ -1,3 +1,14 @@
+2000-03-10  Mo DeJong  <mdejong@redhat.com>
+
+	* src/jacl/tcl/lang/Expression.java:
+	* src/jacl/tcl/lang/StringCmd.java:
+	* src/jacl/tcl/lang/Util.java: Got rid of the
+	Util.isLetterOrDigit() method. It was a workaround
+	for a bug in the Microsoft JVM. Since we do not
+	support the Microsoft JVM and it does not exist
+	anymore, there is no reason to leave this bug
+	workaround in the code.
+
 2000-03-01  Mo DeJong  <mdejong@redhat.com>
 
 	* diffs.txt:
